History of Asubst:
------------------
18/07/2007 V3_7
Bugfix: Fix and robustify the parsing of arguments.
Bugfix: Fix language setting (env and/or arg).
Bugfix: Change -v to -V for --version.
Bugfix: Do not commit when -t.
Bugfix: Propagate all access right of original file into new file.

22/04/2007 V3_6
Add: -t or --test option.

13/04/2007 V3_5
Internal change in Utf_8 handling.

25/04/2006 V3_4
Bugfix: Return "" i.o. exception when no matching substring.
Bugfix: Forbid "\n" in noregex mode.
Add: Improve doc regarding noregex mode.

25/04/2006 V3_3
Add: -x or --noregex for nor considering find pattern as a regex.

25/04/2006 V3_2
Add: Forbid \x00 in find pattern (it does not work with regex).

23/04/2006 V3_1
Add: Support \A for [:alpha:], \B for [:blank:]... in find pattern.

17/04/2006 V3_0
Add: Check if env variable LANG ends by ".UTF-8" then check env variable
     ASUBST_UTF8, then apply -u or -a option.

16/04/2006 V2_13
Add: -u or --utf8 for UTF-8 processing, and -a or --ascii for ASCII processing.
Bugfix: Invalid processing of \R00 if multiple regexps.
CHANGE: \R00 and \r0i become forbidden.

06/04/2006 V2_12
Bugfix: Exception in replace because string for replace must be full string
        and not matching string.

03/04/2006 V2_11
Add: Reject argument starting with "-" if it is not a valid option
     and if it is not after "--".

09/02/2006 V2_10
Add: Improve doc and help text.

22/12/2005 V2_9
Add: Options -f (--file) for file of files, and -m <max> (--max=<max>) for
     maximum of subtitutions per file.
Add: Count substitutions and lines with Long_Long.

21/12/2005 V2_8
Add: checks of access right on file prior to substitution.
Add: clean temp file in case of exception.
Bugfix: file name was always displayed if default verbosity (since V2_7).

19/12/2005 V2_7
Add: -n (--number) and -v (--verbose) options for putting number of
     substitutions and substitution details.

19/12/2005 V2_6
Add: Clear the help and version messages.

15/12/2005 V2_5