@@ -1,5 +1,5 @@
 #!/bin/bash
 export find=$1
 shift
-asubst -t $find "" $*
+asubst -g $find "" $*
 
